Manifests/monitoring/gke/prometheus-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-web
  namespace: monitoring
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports":{"http":"prometheus-bcfg"}}'
    cloud.google.com/healthcheck-path: "/prom/-/ready"
spec:
  selector:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/instance: k8s
  ports:
    - name: http
      port: 9090
      targetPort: web
  type: ClusterIP
