Manifests/monitoring/gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "true"
spec:
  ingressClassName: gce
  rules:
    - http:
        paths:
          # Grafana at /
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  name: http
          # Prometheus at /prom
          - path: /prom
            pathType: Prefix
            backend:
              service:
                name: prometheus-web
                port:
                  name: http
